--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         }
     ],
     "require": {
-        "php": ">=5.3.2"
+        "php": ">=5.3.2",
+        "kriswallsmith/buzz": "^0.14.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.7"
