--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
             "email": "info@locastic.com"
         },
         {
-            "name": "Antonio Peric",
+            "name": "Antonio Peric-Mazar",
             "email": "antonio@locastic.com"
         }
     ],
